environments/imperial-gateway/k8s/empire.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: traffic-control
---
apiVersion: v1
kind: Namespace
metadata:
  name: deathstar
  labels:
    hostname: deathstar.empire.galactic.gov
---
apiVersion: v1
kind: Namespace
metadata:
  name: eye-of-palpatine
  labels:
    hostname: eop.empire.galactic.gov
---
apiVersion: v1
kind: Namespace
metadata:
  name: omega-frost
---
apiVersion: v1
kind: Namespace
metadata:
  name: golan-iii
---
apiVersion: v1
kind: Namespace
metadata:
  name: bounty-hunters
---
apiVersion: v1
kind: Namespace
metadata:
  name: imperial-starships
---
apiVersion: v1
kind: Namespace
metadata:
  name: rebel-scum
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  namespace: deathstar  
  labels:
    app.kubernetes.io/name: deathstar
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
  namespace: deathstar  
  labels:
    app.kubernetes.io/name: deathstar
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: deathstar
  template:
    metadata:
      labels:
        org: empire
        class: deathstar
        app.kubernetes.io/name: deathstar
    spec:
      containers:
      - name: starwars
        image: local/starwars:0.1
---
apiVersion: v1
kind: Service
metadata:
  name: eye-of-palpatine
  namespace: eye-of-palpatine
  labels:
    app.kubernetes.io/name: eye-of-palpatine
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    org: empire
    class: eye-of-palpatine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eye-of-palpatine
  namespace: eye-of-palpatine
  labels:
    app.kubernetes.io/name: eye-of-palpatine
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: eye-of-palpatine
  template:
    metadata:
      labels:
        org: empire
        class: eye-of-palpatine
        app.kubernetes.io/name: eye-of-palpatine
    spec:
      containers:
      - name: starwars
        image: local/starwars:0.1
---
apiVersion: v1
kind: Pod
metadata:
  name: tiefighter
  namespace: imperial-starships
  labels:
    org: empire
    class: tiefighter
    app.kubernetes.io/name: tiefighter
spec:
  containers:
  - name: spaceship
    image: docker.io/cilium/json-mock
---
apiVersion: v1
kind: Pod
metadata:
  name: xwing
  namespace: rebel-scum  
  labels:
    app.kubernetes.io/name: xwing
    org: alliance
    class: xwing
spec:
  containers:
  - name: spaceship
    image: docker.io/cilium/json-mock
---
apiVersion: v1
kind: Service
metadata:
  name: landing-request-v1
  namespace: traffic-control
  labels:
    app.kubernetes.io/name: landing-request-v1
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    org: empire
    class: landing-request-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-request-v1
  namespace: traffic-control  
  labels:
    app.kubernetes.io/name: landing-request-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: landing-request-v1
  template:
    metadata:
      labels:
        org: empire
        class: landing-request-v1
        app.kubernetes.io/name: landing-request-v1
    spec:
      containers:
      - name: starwars
        image: local/starwars:0.1
---
apiVersion: v1
kind: Service
metadata:
  name: landing-request-v2
  namespace: traffic-control  
  labels:
    app.kubernetes.io/name: landing-request-v2
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    org: empire
    class: landing-request-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-request-v2
  namespace: traffic-control  
  labels:
    app.kubernetes.io/name: landing-request-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: landing-request-v2
  template:
    metadata:
      labels:
        org: empire
        class: landing-request-v2
        app.kubernetes.io/name: landing-request-v2
    spec:
      containers:
      - name: starwars
        image: local/starwars:0.1
