environments/imperial-gateway/k8s/deathstar-gateway.yaml
---
# Persona Scope: Cluster operator
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: deathstar-gateway
  namespace: deathstar  
spec:
  gatewayClassName: cilium  #which of the available gateway classes we'll be using.
  listeners:
  - protocol: HTTP # Lets just listen for HTTP 
    port: 80 # listen on port 80
    hostname: "www.deathstar.empire"
    name: web-gw
    # Can only attach HTTPRoutes from the same namespace (deathstar namespace)
    allowedRoutes:
      namespaces:
        from: Same
