environments/imperial-gateway/k8s/simple-infra-gateway.yaml
---
# Persona Scope: Cluster operator
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra
  namespace: infra  
spec:
  gatewayClassName: cilium  #which of the available gateway classes we'll be using.
  listeners:
  - protocol: HTTP # Lets just listen for HTTP 
    port: 80 # listen on port 80
    hostname: infra.empire.galatic.gov
    name: web-gw
    # Can only attach HTTPRoutes from the same namespace (deathstar namespace)
    allowedRoutes:
      namespaces:
        from: Same
