environments/imperial-gateway/k8s/deathstar-cross-namespace-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deathstar
  namespace: deathstar
spec:
  parentRefs:
  - name: deathstar-gateway
    namespace: deathstar
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: access-denied
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v1/request-landing
      method: POST 
    backendRefs:
    # Death star app team wants to rely on infra's landing-request app
    # But who gets to decide if that's allowed?
    #  Answer: ReferenceGrant under the control of the infra team  
    - name: landing-request-v1
      namespace: infra
      port: 80
      weight: 50
