environments/imperial-gateway/k8s/deathstar-weighted-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deathstar
  namespace: deathstar
spec:
  parentRefs:
  - name: deathstar-gateway
    namespace: deathstar
  - name: infra
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: access-denied
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v1/request-landing
      method: POST 
    backendRefs:
    - name: landing-request-v1
      namespace: traffic-control
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v1/request-landing
      method: POST 
      headers:
        - name: "x-request-id"
          value: "alternative"
    backendRefs:
    - name: landing-request-v2
      namespace: traffic-control
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v1/request-landing
      method: POST 
      headers:
        - name: "x-request-id"
          value: "weighted"
    backendRefs:
    - name: landing-request-v2
      namespace: traffic-control
      port: 80
      weight: 50
    - name: landing-request-v1
      namespace: traffic-control
      port: 80
      weight: 50
